// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TestCases normal runtime error-handling error-handling should compile: errors 1`] = `
Array [
  Object {
    "loc": "2:8-136",
    "message": "Module not found: Error: Can't resolve './missingModule' in '<TEST_DIR>'",
    "moduleName": "./runtime/error-handling/index.js",
  },
]
`;

exports[`TestCases normal runtime error-handling error-handling should compile: warnings 1`] = `
Array [
  Object {
    "loc": "23:2-29",
    "message": "Module not found: Error: Can't resolve './missingModule2' in '<TEST_DIR>'",
    "moduleName": "./runtime/error-handling/index.js",
  },
]
`;
